# zkwallet-opt

./: .gitignore  .gitmodules  Cargo.toml  README.md  package.json
docs/: legacy-zkwallet-circuits-deprecation-plan-2026-03-23.md  server-systemd-deployment-2026-03-23.md  ux-research-transfer-simplification.md  zkpasskey-integration-research.md  zktransfer-api-draft.md  zktransfer-consumer-ux.md  zktransfer-custody-architecture.md  zktransfer-implementation-plan.md  zktransfer-open-questions.md  zktransfer-ui-architecture.md  zktransfer-ui-test-guide.md  zktransfer_current_state.md  zktransfer_prompt_history.md  zkwallet-crypto-profile-2026-03-23.md  zkwallet-evaluation-report.md  zkwallet-ux-improvement-research.md
scripts/: check-no-legacy-runtime-references.mjs  zktransfer-ops-changes.mjs  zktransfer-ops-changes.test.mjs  zktransfer-ops-compare-core.mjs  zktransfer-ops-compare.mjs  zktransfer-ops-compare.test.mjs  zktransfer-ops-doctor.sh  zktransfer-ops-doctor.test.mjs  zktransfer-ops-export.mjs  zktransfer-ops-export.test.mjs  zktransfer-ops-history.mjs  zktransfer-ops-history.test.mjs  zktransfer-ops-latest.mjs  zktransfer-ops-latest.test.mjs  zktransfer-ops-next.mjs  zktransfer-ops-next.test.mjs  zktransfer-ops-overview.mjs  zktransfer-ops-overview.sh  zktransfer-ops-overview.test.mjs  zktransfer-ops-plan.mjs  zktransfer-ops-plan.test.mjs  zktransfer-ops-previous.mjs  zktransfer-ops-previous.test.mjs  zktransfer-ops-prune.mjs  zktransfer-ops-prune.test.mjs  zktransfer-ops-report.mjs  zktransfer-ops-report.test.mjs  zktransfer-ops-run.sh  zktransfer-ops-run.test.mjs  zktransfer-ops-shell.test.mjs  zktransfer-ops-snapshot.mjs  zktransfer-ops-snapshot.test.mjs  zktransfer-ops-summary.mjs  zktransfer-ops-summary.sh  zktransfer-ops-summary.test.mjs  zktransfer-ops.sh
src/: lib.rs
src/gadget/: mod.rs
src/zkwallet/: circuit.rs  mod.rs
zktransfer-server-app/: .env.example  .gitignore  README.md  SOCIAL_RECOVERY_TESTING.md  package-lock.json  package.json
zktransfer-server-app/integration/: socialRecovery.integration.test.js  socialRecoveryHarness.mjs  zkpasskeyRelayer.integration.test.js
zktransfer-server-app/scripts/: bootstrap-zkpasskey-localnet.mjs  check-readiness.mjs  check-runtime-deps.sh  deployment-status.sh  dev-oidc-jwks-server.mjs  dev-oidc-keypair.mjs  dev-oidc-mint.mjs  ensure-jwt-secret.sh  install-systemd-service.sh  social-recovery-dev-oidc-smoke.mjs  social-recovery-local-demo.mjs  social-recovery-smoke-bundle-core.mjs  social-recovery-smoke-changes-previous.mjs  social-recovery-smoke-changes-snapshot.mjs  social-recovery-smoke-changes.mjs  social-recovery-smoke-check.mjs  social-recovery-smoke-checksums-changes.mjs  social-recovery-smoke-checksums-compare.mjs  social-recovery-smoke-checksums.mjs  (+110 more)
(+172 files in other folders)
